nexus/templates/nexus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus
  namespace: nexus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus
  template:
    metadata:
      labels:
        app: nexus
    spec:
      securityContext:
        fsGroup: 200  # Ensures the volume has the correct group permissions
      containers:
        - name: nexus
          image: sonatype/nexus3:latest
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: nexus-storage
              mountPath: /nexus-data
            - name: nexus-config-volume
              mountPath: /etc/nexus/nexus.properties
              subPath: nexus.properties
      volumes:
        - name: nexus-storage
          persistentVolumeClaim:
            claimName: nexus-pvc
        - name: nexus-config-volume
          emptyDir: {}
